# simplemem-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_INTEGRATION_GUIDE.md  OAUTH_QUICKREF.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
src/simplemem_mcp/: __init__.py  __main__.py  oauth.py  oauth_server.py  server.py
tests/: __init__.py  test_oauth.py  test_oauth_integration.py  test_oauth_server.py
