[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplemem-mcp"
version = "0.1.0"
description = "MCP server that provides a seamless interface to simplemem-api for memory management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.4,<3",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "passlib>=1.7.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
simplemem-mcp = "simplemem_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simplemem_mcp"]
